src/test/ui/loop-break-value-no-repeat.stderr
error[E0571]: `break` with value from a `for` loop
  --> $DIR/loop-break-value-no-repeat.rs:22:9
   |
22 |         break 22 //~ ERROR `break` with value from a `for` loop
   |         ^^^^^^^^ can only break with a value inside `loop`

error: aborting due to previous error

